# sushi-gui

./: .gitignore  .gitmodules  README.md  client.py  pyproject.toml  qt_client.py  requirements.txt
elkpy/: sushi_info_types.py  sushicontroller.py
src/: client.py  client.spec  main_window.py  widgets.py
sushi_gui/: client.py  constants.py  controller.py  dialogs.py  main_window.py  widgets.py
sushi_gui_example/: client.py  client.spec  constants.py  controller.py  dialogs.py  main_window.py  widgets.py
